# wiki-trending-agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/src/wiki_trending_agent/: __init__.py  config.py  db.py  main.py  models.py  wiki_structured.py  wikipedia_urls.py
backend/src/wiki_trending_agent/integrations/: serper_client.py  wikimedia_client.py
backend/src/wiki_trending_agent/services/: agent_runtime.py  events.py  ingest.py  orchestrator.py  trends.py
backend/tests/: test_agent_runtime.py  test_end_to_end_local.py  test_health.py  test_ingest_csv.py  test_integrations_clients.py  test_models_schema.py  test_run_lifecycle.py  test_run_stream.py  test_trends_query.py  test_wiki_structured.py  test_wikimedia_client.py  test_wikipedia_urls.py
data/: 12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv
docs/plans/: 2026-03-29-wiki-trending-agent-design.md  2026-03-29-wiki-trending-agent-implementation.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  App.vue  api.ts  main.ts  main.tsx  renderMarkdown.ts  styles.css
frontend/src/components/: EventCandidates.tsx  HourSelector.tsx  PageResultsList.tsx  RunControls.tsx  RunTimeline.tsx
frontend/src/test/: App.spec.ts  App.test.tsx  streaming-ui.spec.ts  streaming-ui.test.tsx
