[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-trending-agent-backend"
version = "0.1.0"
description = "Backend service for Wikipedia trending analysis."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.2",
  "uvicorn>=0.34.0",
  "sqlalchemy>=2.0.40",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.10.1",
  "httpx>=0.28.1",
  "alembic>=1.16.5",
  "psycopg[binary]>=3.2.10",
  "openai>=1.104.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
